...
                                                        </userDefinedRuntimeAttribute>
                                                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                                                    </userDefinedRuntimeAttributes>
                                                </imageView>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cN2-Jj-eKI" userLabel="Like Button">
                                                    <rect key="frame" x="333" y="4" width="44" height="44"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="likeButton"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" constant="44" id="4no-Pr-csB"/>
                                                        <constraint firstAttribute="height" constant="44" id="o0s-ML-0TF"/>
                                                    </constraints>
                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                    <state key="normal" image="like_button_on"/>
...
                                            <outlet property="dateLabel" destination="yeT-w6-d7a" id="bVZ-Ph-clQ"/>
                                            <outlet property="likeButton" destination="cN2-Jj-eKI" id="fFX-KK-LAK"/>
                                        </connections>
                                    </tableViewCell>
                                </prototypes>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="ImagesListTableView"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="I0Q-dy-68i"/>
                                    <outlet property="delegate" destination="BYZ-38-t0r" id="dwu-a5-NX1"/>
                                </connections>
                            </tableView>
...
                                <connections>
                                    <outlet property="delegate" destination="8y3-qA-Acj" id="9lK-Cv-G5H"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6KK-jA-924">
                                <rect key="frame" x="8" y="67" width="48" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="BackButton"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="48" id="Plz-z8-TYg"/>
                                    <constraint firstAttribute="height" constant="48" id="sow-4f-Ma0"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="Backward"/>
...
                                <rect key="frame" x="166.66666666666666" y="448" width="60" height="60"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="60" id="5YS-qF-Imt"/>
                                    <constraint firstAttribute="width" constant="60" id="nXh-05-a2T"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5Mx-PW-r0f" userLabel="Login">
                                <rect key="frame" x="16" y="695" width="361" height="33"/>
                                <color key="backgroundColor" name="YP White"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                <color key="tintColor" name="YP Black"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" title="Войти">
                                    <color key="titleColor" name="YP Black"/>
                                </state>
...
            <objects>
                <viewController storyboardIdentifier="WebViewViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="gfR-1w-VyC" customClass="WebViewViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="hjt-b6-YGT">
                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <wkWebView contentMode="scaleToFill" restorationIdentifier="UnsplashWebView" translatesAutoresizingMaskIntoConstraints="NO" id="Opz-9o-YKG">
                                <rect key="frame" x="0.0" y="172" width="393" height="680"/>
                                <color key="backgroundColor" name="YP White"/>
                                <wkWebViewConfiguration key="configuration">
                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
                                    <wkPreferences key="preferences"/>
                                </wkWebViewConfiguration>
...
